Mload functional + other .4t files loading ok.

--- a/percom/mpx9/Makefile
+++ b/percom/mpx9/Makefile
@@ -45,6 +45,9 @@ MODULE_OBJS=$(MODULE_SRCS:.asm=.md)
 # $(info MODULE_OBJS $(MODULE_OBJS))
 
 
+SCRNFILE=scrnfile.sc
+SCRNPADD=64
+
 all: $(EPROMS) $(TGTDSK) $(BLKDSK) $(FTHDSK) $(BLKDSK2)
 
 .PHONY:
@@ -75,17 +78,27 @@ sub-makes:
 # $(TGTDSK) : boot-sector/BootSector.bin os/MPX9.SY
 # 	$(MPX9DSK) $(TGTDSK) --init boot-sector/BootSector.bin os/MPX9.SY -f 
 
-$(TGTDSK): boot-sector/BootSector.bin os/mpx9.sy                                               $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) mpx9+/mpx9+.cm1 $(MODULE_OBJS) # sub-makes
+tForth/tforth09.cm : tForth/jns.ib tForth/tforth09.asm
+
+tForth/jns.ib : tForth/VT100.4th tForth/asm09.4th 
+	cat tForth/VT100.4th tForth/asm09.4th | tr '\n' ' ' >tForth/jns.ib
+
+#.PHONY:
+$(SCRNFILE) : tForth/Screens0-5.txt tForth/Screen-blank.txt
+	python2 tForth/File2Scrn.py tForth/Screens0-5.txt tForth/Screen-blank.txt -p $(SCRNPADD) >$(SCRNFILE)
+
+$(TGTDSK): boot-sector/BootSector.bin os/mpx9.sy              $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) mpx9+/mpx9+.cm1 $(MODULE_OBJS) # sub-makes
 	$(MPX9DSK) $(TGTDSK) -n --init boot-sector/BootSector.bin os/mpx9.sy
 	$(MPX9DSK) $(TGTDSK) -n -w --entry 0x1000 --buffer 0x1000 $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) mpx9+/mpx9+.cm1 $(MODULE_OBJS) -f 
 
 $(BLKDSK): boot-sector/BootSector.bin os/mpx9.sy
 	$(MPX9DSK) $(BLKDSK) -n --init boot-sector/BootSector.bin os/mpx9.sy -f 
 
-$(FTHDSK): boot-sector/BootSector.bin os/mpx9.sy tForth/tforth09.cm tForth/*.4th
+$(FTHDSK): boot-sector/BootSector.bin os/mpx9.sy tForth/tforth09.cm tForth/*.4th $(SCRNFILE)
 	$(MPX9DSK) $(FTHDSK) -n --init boot-sector/BootSector.bin os/mpx9.sy 
 	$(MPX9DSK) $(FTHDSK) -n -w tForth/tforth09.cm --entry 0 --buffer 0
-	$(MPX9DSK) $(FTHDSK) -n -w tForth/*.4th -f
+	$(MPX9DSK) $(FTHDSK) -n -w tForth/*.4th
+	$(MPX9DSK) $(FTHDSK) -n -w $(SCRNFILE) -f
 
 $(BLKDSK2): boot-sector/BootSector.bin os/mpx9.sy
 	$(MPX9DSK) $(BLKDSK2) -n --init boot-sector/BootSector.bin os/mpx9.sy -f 
