wip on visual screen editor.

--- a/percom/mpx9/Makefile
+++ b/percom/mpx9/Makefile
@@ -7,7 +7,7 @@ FTHDSK=forth.dsk
 BLKDSK2=blank2.dsk
 
 SCRNFILE=scrnfile.sc
-SCRNPADD=8
+SCRNPADD=25
 
 UTILS=create DskEdt exec list memtst OutVectr copy hexload
 UTIL_SRCS=$(foreach file,$(UTILS),utils/$(file).asm)
@@ -83,25 +83,31 @@ tForth/tforth09.cm : tForth/memboot.tmp tForth/tforth09.asm
 tForth/memboot.tmp : /dev/null 
 	cat /dev/null | tr '\n' ' ' >tForth/memboot.tmp
 
+INIT_FILES=boot-sector/BootSector.bin os/mpx9.sy
+4TH_SRCS=Finish-tForth09 editor misctools vedit 
+4TH_FILES=$(foreach file,$(4TH_SRCS),tForth/$(file).4th)
+4TH_SCREENS=tForth/Screens0-5.txt tForth/asm09.4th tForth/handy.4th tForth/VT100.4th
+
 #.PHONY:
-$(SCRNFILE) : tForth/Screens0-5.txt tForth/handy.4th tForth/VT100.4th
-	python2 tForth/File2Scrn.py tForth/Screens0-5.txt tForth/handy.4th tForth/VT100.4th -p $(SCRNPADD) >$(SCRNFILE)
+$(SCRNFILE) : $(4TH_SCREENS) 
+	python2 tForth/File2Scrn.py $(4TH_SCREENS) -p $(SCRNPADD) -D >$(SCRNFILE)
 
 # tForth/Screen-blank.txt 
-$(TGTDSK): boot-sector/BootSector.bin os/mpx9.sy              $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) mpx9+/mpx9+.cm1 $(MODULE_OBJS) # sub-makes
+$(TGTDSK): $(INIT_FILES)                                      $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) mpx9+/mpx9+.cm1 $(MODULE_OBJS) # sub-makes
 	$(MPX9DSK) $(TGTDSK) -n --init boot-sector/BootSector.bin os/mpx9.sy
 	$(MPX9DSK) $(TGTDSK) -n -w --entry 0x1000 --buffer 0x1000 $(UTIL_OBJS) $(XUTIL_FILES) $(MYUTIL_OBJS) $(XMYUTIL_FILES) mpx9+/mpx9+.cm1 $(MODULE_OBJS) -f 
 
-$(BLKDSK): boot-sector/BootSector.bin os/mpx9.sy
+$(BLKDSK): $(INIT_FILES)
 	$(MPX9DSK) $(BLKDSK) -n --init boot-sector/BootSector.bin os/mpx9.sy -f 
 
-$(FTHDSK): boot-sector/BootSector.bin os/mpx9.sy tForth/tforth09.cm tForth/*.4th $(SCRNFILE)
+$(FTHDSK): $(INIT_FILES) tForth/tforth09.cm $(4TH_FILES) $(SCRNFILE)
 	$(MPX9DSK) $(FTHDSK) -n --init boot-sector/BootSector.bin os/mpx9.sy 
 	$(MPX9DSK) $(FTHDSK) -n -w tForth/tforth09.cm --entry 0 --buffer 0
-	$(MPX9DSK) $(FTHDSK) -n -w tForth/*.4th 
+	$(MPX9DSK) $(FTHDSK) -n -w $(4TH_FILES) 
 	$(MPX9DSK) $(FTHDSK) -n -w $(SCRNFILE) -f
 
-$(BLKDSK2): boot-sector/BootSector.bin os/mpx9.sy
+
+$(BLKDSK2): $(INIT_FILES)
 	$(MPX9DSK) $(BLKDSK2) -n --init boot-sector/BootSector.bin os/mpx9.sy -f 
 
 test: $(EPROMS) $(TGTDSK) $(FTHDSK) $(BLKDSK2)
